--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "nodemailer": "^6.4.14",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "sinon": "^9.2.0"
+    "sinon": "^9.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
