Overhaul of application
Now has:
-itinerary object
-mapControls object
-new start page

Deleted:
-pre-existing files that did not serve the application
-

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/CPS-5301-Team-2/Backend#readme",
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.14.3",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "connect-flash": "^0.1.1",
